[package]
name = "core-lib"
version = "0.1.9"
description = "Rust library"
license = "MIT"
edition = "2021"

[dependencies]
async-nats = "0.17"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
lazy_static = "1"
regex = "1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
slug = "0.1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "0.8", features = ["v4"] }
